@@ -401,6 +401,9 @@
 /* Define to 1 if you have the <rpc/rpc.h> header file. */
 #mesondefine HAVE_RPC_RPC_H
 
+/* Define to 1 if the <rpcsvc/rquota.h> header file has a qr_status member. */
+#mesondefine HAVE_RQUOTA_H_QR_STATUS
+
 /* Define to 1 if you have the <security/pam_appl.h> header file. */
 #mesondefine HAVE_SECURITY_PAM_APPL_H
 
